# debuglog

./: !TODO.txt  !design_notes.txt  .clang-format  CMakeLists.txt  LICENSE  build.sh
doc/: USAGE.txt
src/: debuglog_main.cpp  debugresolve.cpp  debugwatch.cpp  objlog.cpp  tostr_handler.cpp
src/include/: debuglog.h  debuglog_categories.h  debuglog_enum.h  debuglog_main.h  debuglog_scope.h  debuglog_settings.h  debuglog_streaming.h  debugresolve.h  debugrvirtresolve.h  debugwatch.h  objlog.h  properties_ext.h  tostr.h  tostr_fmt_include.h  tostr_handler.h
src/src/include/: tostr_variant.h
tests/: debuglog_categories.h  debuglog_tostr_my_handler.cpp  debuglog_tostr_my_handler.h  main.cpp  main.h  test_objlog.cpp  test_objlog.h  test_sentry.cpp  test_sentry_extra.cpp  test_tostr.cpp  test_tostr.h
